fix share button positioning on mobile for Work detail pages

--- a/bureau-site/css/style.css
+++ b/bureau-site/css/style.css
@@ -1358,10 +1358,29 @@ a.btn-primary, a:visited.btn-primary {
   float: left; }
 
 /* line 30, pages/work-detail.sass */
+.addthis_button_facebook_like,
+.addthis_button_tweet,
+.addthis_button_pinterest_pinit,
+.addthis_button_google_plusone,
+.addthis_button_linkedin_counter {
+  display: block;
+  margin-top: 1.64681em;
+  float: none !important; }
+  @media only screen and (min-width: 580px) {
+    /* line 30, pages/work-detail.sass */
+    .addthis_button_facebook_like,
+    .addthis_button_tweet,
+    .addthis_button_pinterest_pinit,
+    .addthis_button_google_plusone,
+    .addthis_button_linkedin_counter {
+      margin-top: 0;
+      float: left !important; } }
+
+/* line 45, pages/work-detail.sass */
 .addthis_button_facebook_like {
   width: 106px; }
 
-/* line 32, pages/work-detail.sass */
+/* line 47, pages/work-detail.sass */
 .addthis_button_pinterest_pinit {
   width: 68px; }
 
