--- a/source/css/pages/work-detail.sass
+++ b/source/css/pages/work-detail.sass
@@ -27,6 +27,21 @@
 
 // social buttons
 
+.addthis_button_facebook_like,
+.addthis_button_tweet, 
+.addthis_button_pinterest_pinit,
+.addthis_button_google_plusone,
+.addthis_button_linkedin_counter
+  display: block
+  margin-top: $l-m
+  float: none !important
+  @media only screen and (min-width: $first-break)
+    margin-top: 0
+    float: left !important
+
+
+
+
 .addthis_button_facebook_like
   width: 106px
 .addthis_button_pinterest_pinit
